Fix #492 GetFeatureInfo without certificate + encoding